--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/usage.statistics.xml
+.idea/dictionaries
+.idea/shelf
+
 # Generated files
 .idea/**/contentModel.xml
 
